--- a/views/hr_hospital_views.xml
+++ b/views/hr_hospital_views.xml
@@ -162,6 +162,7 @@
     <!-- Корневое меню -->
     <menuitem
         id="menu_hr_hospital_root"
+        web_icon="hr_hospital,static/description/icon.png"
         name="Hospital"
         sequence="10" />
 
